--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is a demo application to show to how to get started with Meteor using React and React-Router.
+This is a demo application to show to how to get started with Meteor 1.2 using React and React Router 1.0.0-rc4.
+
+To easily get started with React Router and Meteor, simply run `meteor add reactrouter:react-router`.
