Add authentication and auth-protected routes

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-This is a demo application to show to how to get started with Meteor 1.2 using React and React Router 1.0.0-rc4.
+This is a demo application to show to how to get started with Meteor 1.2 using React and React Router 1.0.0-rc4. It can serve as a skeleton application for apps needing React and Meteor.
 
 To easily get started with React Router and Meteor, simply run `meteor add reactrouter:react-router`.
+
+### Key Concepts Demonstrated ###
+* React with Meteor
+* Basic routing with React Router
+* Routes requiring authentication
+* Working with reactive data
